<resources>

    <string name="app_name">Santhe</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAWbTQiRME9xZZOSo_RIYkMuURMkxv2uwc</string>
    <string name="Next">Next</string>
    <string name="NoData">No data found</string>
    <string name="Previous">Previous</string>
    <string name="statement">Get Connected With Farmers Directly</string>
    <string name="sell">Sell Item Anytime</string>
    <string name="share">Share Your View Via Comment</string>
    <string name="Verify">Verify</string>
    <string name="Skip">Skip</string>
    <string name="Personalize">Personalize</string>
    <string name="Vegetables">Green Vegetable</string>
    <string name="Fruit">Fruit</string>
    <string name="aboutPersonalise">You can select Multiple item \n that you are personalize in farming</string>
    <string name="Grains">Grains</string>
    <string name="Flower">Flower</string>
    <string name="Medical">Medical</string>
    <string name="Milk">Dairy</string>
    <string name="Fish">Fish</string>
    <string name="Fertilizer">Fertilizer</string>
    <string name="Start">Start</string>
    <string name="Profile">Profile</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="category">Personalised Farm Category</string>
    <string name="Santhe">Santhe</string>
    <string name="Useful">Dealers Information</string>
    <string name="Buy">Buy</string>
    <string name="Sell">Sell</string>
    <string name="SellLocation">SELLING LOCATION</string>
    <string name="Discussion">Discussion</string>
    <string name="Update">My Updates</string>
    <string name="AddPhoto">Add Photo</string>
    <string name="enterWeight">How much do you have</string>
    <string name="enterItem">Enter item price</string>
    <string name="Negotiable">Negotiable</string>
    <string name="Post">Post Item</string>
    <string name="location">Location Details</string>
    <string name="nameValid">Please enter name</string>
    <string name="phoneNumberValid">Please enter 10 digit number</string>
    <string name="otpStatement">We just send you the OTP please enter \n the OTP below or Reset</string>
    <string name="Submit">Submit</string>
    <string name="otp">Enter OTP </string>
    <string name="Category">Category :</string>
    <string name="Location">Location on map</string>
    <string name="Postitem">Post item for sell</string>
    <string name="AddComment">Add comment here</string>
    <string name="emaiId">Enter Your Email Id</string>
    <string name="enterNumber">Enter Mobile Number</string>
    <string name="pleaseWait">Please wait</string>
    <string name="saveaddress">Save Address</string>
    <string name="gps_network_not_enabled">gps network not enabled</string>
    <string name="open_location_settings">open location settings</string>
    <string name="cancel">cancel</string>
    <string name="grant_permission">grant permission</string>
    <string name="no_location">no location</string>
    <string name="please_choose_location">please choose location</string>
    <string name="something">something went wrong try again latter</string>
    <string name="Unable">Unable to like please try again latter</string>
    <string name="unable">Unable to delete please try again latter</string>
    <string name="network">Please connect to working internet</string>
    <string name="editPostItem">Edit post item</string>
    <string name="selectCategory">Please Select Category</string>
    <string name="selectUnit">Please Select the Unit</string>
    <string name="selectItemPrice">Please Enter Item Price</string>
    <string name="selectWeight">Please Enter weight of item</string>
    <string name="Institution">Institutions</string>
    <string name="page1">we help consumer and retail to connect with farmers directly. Information are updated in real time by farmers themselves.</string>
    <string name="page2">You can now take picture of your product and select the price you want to sell at and get instant calls from buyers.</string>
    <string name="page3">You can now share best practices. Ask question, answer question and make right decisions.</string>
    <string name="Fetching">Fetching address ...</string>
    <string name="noLocation">No Location Available</string>
    <string name="validemaiId">Enter valid email id</string>

</resources>
