<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background_image"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="40dp"
	>

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:contentDescription="@null"
			android:src="@drawable/mobile"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="25dp"
			android:gravity="center">

			<TextView
				android:id="@+id/tvStatement"
				fontPath="fonts/Pangram-Regular.otf"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@color/colorTransparent"
				android:gravity="center"
				android:text="@string/otpStatement"
				android:textColor="@color/colorWhite"
				android:textSize="16sp"
				tools:ignore="MissingPrefix"/>

		</RelativeLayout>

		<EditText
			android:id="@+id/etOtp"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_gravity="center"
			android:layout_marginTop="40dp"
			android:background="@drawable/border_for_layout"
			android:hint="@string/otp"
			android:inputType="number"
			android:maxLines="1"
			android:paddingEnd="5dp"
			android:paddingStart="15dp"
			android:textColor="@color/colorWhite"
			android:textColorHint="@color/colorWhite"
			android:textSize="15sp"/>

		<Button
			android:id="@+id/btnSubmit"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_marginTop="30dp"
			android:background="@color/colorWhite"
			android:text="@string/Submit"
			android:textAllCaps="false"
			android:textColor="@color/colorGreen"
            android:textSize="17sp"
			android:textStyle="bold"/>


</LinearLayout>