<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/rvHeading"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/tvPersonalise"
            fontPath="fonts/Pangram-Black.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Personalize"
            android:textColor="@color/colorGray"
            android:textSize="20sp"
            tools:ignore="MissingPrefix" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/tvPersonalise"
            android:gravity="end">

            <TextView
                android:id="@+id/tvSkip"
                fontPath="fonts/Pangram-Black.otf"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/Skip"
                android:textSize="15sp"
                tools:ignore="MissingPrefix" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tvSkip"
                android:src="@drawable/skip" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/llDummyLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rvHeading"
        android:background="@color/colorGray"></RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rvBottom"
        android:layout_below="@+id/llDummyLayout"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.85"
            android:gravity="center"
            android:text="@string/aboutPersonalise"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGray"></LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcvCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0.15"></android.support.v7.widget.RecyclerView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0.15"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RelativeLayout
                        android:id="@+id/rvVegetable"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivVegetable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/vegetables" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivVegetable"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/Vegetables"
                            android:textColor="@color/colorGray" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivFruit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/fruit" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivFruit"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/Fruit"
                            android:textColor="@color/colorGray"
                            android:textSize="16sp" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView

                            android:id="@+id/ivSeeds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/seeds"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivSeeds"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="Seeds"
                            android:textColor="@color/colorGray"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivGrains"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/grains" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivGrains"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/Grains"
                            android:textColor="@color/colorGray" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivFlower"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/flower" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivFlower"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/Flower"
                            android:textColor="@color/colorGray" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivMedical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/medical"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivMedical"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/Medical"
                            android:textColor="@color/colorGray" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivFertilizer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/fertilizer" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivFertilizer"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/Fertilizer"
                            android:textColor="@color/colorGray" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ivFish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/fish" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivFish"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/Fish"
                            android:textColor="@color/colorGray" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView

                            android:id="@+id/ivMilk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/milk"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ivMilk"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/Milk"
                            android:textColor="@color/colorGray" />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rvBottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"></LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="right">

            <TextView
                android:id="@+id/tvStart"
                fontPath="fonts/Pangram-Black.otf"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/Start"
                android:textSize="15sp"
                tools:ignore="MissingPrefix" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tvStart"
                android:src="@drawable/skip" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>