<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background_image"
	android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
        android:layout_gravity="center"
		android:layout_marginLeft="40dp"
		android:layout_marginRight="40dp"
		android:orientation="vertical"
		>
		<ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/santhelogo" />

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="130dp"
			android:layout_gravity="center"
            android:layout_marginTop="10dp"
			android:gravity="center"
			>

			<ImageView
				android:id="@+id/ivProfile"
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:src="@drawable/user"/>

			<ImageView
				android:id="@+id/ivselectPicture"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignStart="@+id/ivProfile"
                android:layout_marginBottom="23dp"
				android:layout_marginStart="50dp"
				android:src="@drawable/camera"/>
		</RelativeLayout>

        <EditText
            android:id="@+id/etvName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/border_for_layout"
            android:drawableLeft="@drawable/username"
            android:drawablePadding="10dp"
            android:hint="Enter Your Name"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="15sp" />

		<EditText
            android:id="@+id/etvEmail"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_gravity="center"
            android:layout_marginTop="15dp"
			android:background="@drawable/border_for_layout"
			android:drawableLeft="@drawable/username"
			android:drawablePadding="10dp"
            android:hint="@string/emaiId"
			android:paddingLeft="15dp"
			android:singleLine="true"
			android:textColor="@color/colorWhite"
			android:textColorHint="@color/colorWhite"
			android:textSize="15sp"/>

		<EditText
            android:id="@+id/etvPhNumber"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_gravity="center"
            android:layout_marginTop="15dp"
			android:background="@drawable/border_for_layout"
			android:drawableLeft="@drawable/call"
			android:drawablePadding="10dp"
            android:hint="@string/enterNumber"
			android:inputType="number"
			android:paddingLeft="15dp"
			android:singleLine="true"
			android:textColor="@color/colorWhite"
			android:textColorHint="@color/colorWhite"
			android:textSize="15sp"/>

		<Button
			android:id="@+id/btnVerify"
			android:layout_width="match_parent"
			android:layout_height="50dp"
            android:layout_marginTop="20dp"
			android:background="@color/colorWhite"
			android:text="@string/Verify"
			android:textAllCaps="false"
			android:textColor="@color/colorGreen"
			android:textStyle="bold"/>

	</LinearLayout>
    </ScrollView>
</LinearLayout>