<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:background="@color/colorsBackground"
    android:orientation="vertical">


	<RelativeLayout
		android:id="@+id/rvActionBar"
		android:layout_width="match_parent"
		android:layout_height="55dp"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:background="@color/colorGreen">

		<ImageView
			android:id="@+id/ivHome"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:layout_marginLeft="20dp"
            android:contentDescription="@null"
			android:src="@drawable/navigation"/>

		<TextView
			android:id="@+id/tvHeading"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginStart="15sp"
			android:layout_toEndOf="@id/ivHome"
			android:text="@string/Santhe"
			android:textColor="#FFFFFF"
			android:textSize="20sp"
			/>

		<RelativeLayout
			android:id="@+id/rv_click"
			android:layout_width="130dp"
			android:layout_height="match_parent">
		</RelativeLayout>

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_below="@+id/rvActionBar"
		android:background="@color/colorGreen">
	</RelativeLayout>

	<android.support.v7.widget.CardView
        android:id="@+id/cvType"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/rvActionBar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

	<RelativeLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<android.support.v7.widget.RecyclerView
			android:id="@+id/rcvType"
			android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
		</android.support.v7.widget.RecyclerView>

	</RelativeLayout>
	</android.support.v7.widget.CardView>



	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/cvBottom"
        android:layout_below="@+id/cvType"
        android:layout_marginTop="5dp"
		>
		<android.support.v7.widget.RecyclerView
			android:id="@+id/rcvContent"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		</android.support.v7.widget.RecyclerView>

	</RelativeLayout>

	<android.support.v7.widget.CardView
		android:id="@+id/cvBottom"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
		android:background="@color/colorWhite"
		card_view:cardCornerRadius="2dp"
		card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp">

	<LinearLayout
		android:id="@+id/rvBottom"
		android:layout_width="match_parent"
		android:layout_height="60dp"
        android:baselineAligned="false"
		android:orientation="horizontal"
		android:weightSum="3"
		>
		<RelativeLayout
			android:id="@+id/rvBuy"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
            android:layout_weight="1"
			>
			<ImageView
				android:id="@+id/ivBuy"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:contentDescription="@null"
				android:src="@drawable/select_buy"/>
			<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:layout_below="@+id/ivBuy"
                android:layout_marginTop="2dp"
                android:gravity="center"
				android:text="@string/Buy"
				android:textColor="@color/colorGreen"
                android:textSize="17sp" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="1dp"
            android:layout_height="match_parent"
			android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorGray">
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/rvSell"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="5dp"
            android:layout_weight="1"
			>
			<ImageView
				android:id="@+id/ivSell"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
                android:contentDescription="@null"
				android:src="@drawable/sell_deselect"/>
			<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:layout_below="@+id/ivSell"
                android:layout_marginTop="2dp"
                android:gravity="center"
				android:text="@string/Sell"
				android:textColor="@color/colorGray"
                android:textSize="17sp" />
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="1dp"
            android:layout_height="match_parent"
			android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorGray">
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/rvDiscussion"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
            android:layout_weight="1"
			>
			<ImageView
				android:id="@+id/ivDiscussion"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:contentDescription="@null"
				android:src="@drawable/deselect_discussion"/>
			<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:layout_below="@+id/ivDiscussion"
                android:layout_marginTop="2dp"
                android:gravity="center"
				android:text="@string/Discussion"
				android:textColor="@color/colorGray"
                android:textSize="17sp" />
		</RelativeLayout>


	</LinearLayout>
	</android.support.v7.widget.CardView>




</RelativeLayout>